rabbitmq-deployment-canary-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-canary-b
  labels:
    app: rabbitmq
    deployment-group: canary-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq
      deployment-group: canary-b
  template:
    metadata:
      labels:
        app: rabbitmq
        deployment-group: canary-b
    spec:
      containers:
        - name: rabbitmq-3
          image: rabbitmq:4.0.0-beta.3-management
          ports:
            - containerPort: 15692
            - containerPort: 15672
            - containerPort: 5692
