rabbitmq-deployment-featureflag-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-featureflag
  labels:
    app: rabbitmq
    deployment-group: featureflag
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq
      deployment-group: featureflag
  template:
    metadata:
      labels:
        app: rabbitmq
        deployment-group: featureflag
    spec:
      containers:
        - name: rabbitmq-3
          image: rabbitmq:3-management
          ports:
            - containerPort: 15692
            - containerPort: 15672
            - containerPort: 5692
