rabbitmq-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-green
  labels:
    app: rabbitmq
    deployment-group: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq
      deployment-group: green
  template:
    metadata:
      labels:
        app: rabbitmq
        deployment-group: green
    spec:
      containers:
        - name: rabbitmq-4
          image: rabbitmq:4.0.0-beta.3-management
          ports:
            - containerPort: 15692
            - containerPort: 15672
            - containerPort: 5692
