rabbitmq-deployment-recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq-4
          image: rabbitmq:4.0.0-beta.3-management
          ports:
            - containerPort: 15692
            - containerPort: 15672
            - containerPort: 5692
  strategy:
    type: Recreate
