rabbitmq-services-featureflag.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
    deployment-group: featureflag
  ports:
    - protocol: TCP
      port: 80
      targetPort: 15672
  type: ClusterIP
