rabbitmq-gateway-featureflag.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rabbitmq-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - '*'
