rabbitmq-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    nginx.ingress.kubernetes.io/weight.myapp-v1: '50'
    nginx.ingress.kubernetes.io/weight.myapp-v2: '50'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-canary-a
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-canary-b
                port:
                  number: 80
