rabbitmq-virtualservice-featureflag-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rabbitmq
spec:
  hosts:
    - '*'
  gateways:
    - rabbitmq-gateway
  http:
    - match:
        - port: 8080
      route:
        - destination:
            host: rabbitmq
            subset: featureflag-a
            port:
              number: 15672
          weight: 20
        - destination:
            host: rabbitmq
            subset: featureflag-b
            port:
              number: 15672
          weight: 80
